--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="/public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link
@@ -10,7 +11,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>noname</title>
+    <title>케어닥 - 10조</title>
   </head>
   <body>
     <div id="root"></div>
